[package]
name = "bevy_pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy-inspector-egui = "*"
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git", branch = "main" }
egui = "*"
leafwing-input-manager = "0.10.0"

[profile.dev.package."*"]
opt-level = 3
